5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1708_3067.log
== TEST (2019-04-29 15:10:35) 
-- CODE:
atk=input("Espada ou cau")

-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:10:47) 
-- CODE:
atk=input("Espada ou cau")

-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:15:07) 
-- CODE:
atk=input("atk:")
N=int(input("N:"))
if(atk=="ESPADA"):
	print(N+6)

-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:15:51) 
-- CODE:
atk=input("atk:")
N=int(input(""))
if(atk=="ESPADA"):
	print(N+6)

-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:18:55) 
-- CODE:
atk=input("atk:")
x = (N>=1) and (N<=6)
if(atk=="ESPADA"):
	print(N+6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = (N>=1) and (N<=6)
NameError: name 'N' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:19:19) 
-- CODE:
atk=input("atk:")
x = (N>=1) and (N<=6)
print("N:", x)
if(atk=="ESPADA"):
	print(N+6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = (N>=1) and (N<=6)
NameError: name 'N' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:19:26) 
-- CODE:
atk=input("atk:")
x = (N>=1) and (N<=6)
print("N:", x)
if(atk=="ESPADA"):
	print(N+6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = (N>=1) and (N<=6)
NameError: name 'N' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:22:26) 
-- CODE:
atk=input("atk:")
N=int(inout("N:"))
if(atk=="ESPADA" and (N>=1 ) and (N<=6) ):
	print(N+6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    N=int(inout("N:"))
NameError: name 'inout' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:22:58) 
-- CODE:
atk=input("atk:")
N=int(input("N:"))
if(atk=="ESPADA" and (N>=1 ) and (N<=6) ):
	print(N+6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    N=int(inout("N:"))
NameError: name 'inout' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:08) 
-- CODE:
atk=input("atk:")
N=int(input("N:"))
if(atk=="ESPADA" and (N>=1 ) and (N<=6) ):
	print(N+6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    N=int(inout("N:"))
NameError: name 'inout' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:49) 
-- CODE:
atk=input("atk:")
N=int(input("N:"))
if(atk=="ESPADA" and (N>=1 ) and (N<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:02) 
-- CODE:
atk=input("atk:")
N=int(input("N:"))
if(atk=="ESPADA" and (N>=1 ) and (N<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:19) 
-- CODE:
atk=input("atk:")
N=int(input("N:"))
if(atk== ESPADA and (N>=1 ) and (N<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(atk== ESPADA and (N>=1 ) and (N<=6) ):
NameError: name 'ESPADA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:25) 
-- CODE:
atk=input("atk:")
N=int(input("N:"))
if(atk== ESPADA and (N>=1 ) and (N<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(atk== ESPADA and (N>=1 ) and (N<=6) ):
NameError: name 'ESPADA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:46) 
-- CODE:
atk=input("atk:")
N=int(input("N:"))
if(atk= espada and (N>=1 ) and (N<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 3
    if(atk= espada and (N>=1 ) and (N<=6) ):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:50) 
-- CODE:
atk=input("atk:")
N=int(input("N:"))
if(atk= espada and (N>=1 ) and (N<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 3
    if(atk= espada and (N>=1 ) and (N<=6) ):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:57) 
-- CODE:
atk=input("atk:")
N=int(input("N:"))
if(atk = espada and (N>=1 ) and (N<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 3
    if(atk = espada and (N>=1 ) and (N<=6) ):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:29:06) 
-- CODE:
atk=input("atk:")
N=int(input("N:"))
if(atk == espada and (N>=1 ) and (N<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(atk == espada and (N>=1 ) and (N<=6) ):
NameError: name 'espada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:29:52) 
-- CODE:
atk=input("atk:", ESPADA )
N=int(input("N:"))
if(atk == espada and (N>=1 ) and (N<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    atk=input("atk:", ESPADA )
NameError: name 'ESPADA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:49) 
-- CODE:
atk=input("atk:")
N=int(input("N:"))
if(atk == "espada" and (N>=1 ) and (N<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:41) 
-- CODE:
atk=input("atk:")
N=int(input("N:"))
D1=int(input("d1:"))
D2=int(input("d2:"))
D3=int(input("d3:"))
D4=int(input("d4:"))
if(atk == "ESPADA" and (N>=1 ) and (N<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
if(atk=="CAUDA" and (D1>=1 and (D1<=6) and (D2>=1) and (D2<=6) and (D3>=1) and (D3<=6) and (D4>=1) and (D4<=6)):
	print((D1+D2+D3)*D4)	
-- ERROR:
File "XXXX", line 11
    if(atk=="CAUDA" and (D1>=1 and (D1<=6) and (D2>=1) and (D2<=6) and (D3>=1) and (D3<=6) and (D4>=1) and (D4<=6)):
                                                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:44:16) 
-- CODE:
atk=input("atk:")
D1=int(input("d1:"))
D2=int(input("d2:"))
D3=int(input("d3:"))
D4=int(input("d4:"))
if(atk == "ESPADA" and (D1>=1 ) and (D1<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
if(atk=="CAUDA" and (D1>=1) and (D1<=6) and (D2>=1) and (D2<=6) and (D3>=1) and (D3<=6) and (D4>=1) and (D4<=6)):
	print((D1+D2+D3)*D4)	
-- OUTPUT:
Entrada invalida
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:44:39) 
-- CODE:
atk=input("atk:")
D1=int(input("d1:"))
D2=int(input("d2:"))
D3=int(input("d3:"))
D4=int(input("d4:"))
if(atk == "ESPADA" and (D1>=1 ) and (D1<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
if(atk=="CAUDA" and (D1>=1) and (D1<=6) and (D2>=1) and (D2<=6) and (D3>=1) and (D3<=6) and (D4>=1) and (D4<=6)):
	print((D1+D2+D3)*D4)	
-- OUTPUT:
Entrada invalida
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:45:41) 
-- CODE:
atk=input("atk:")
D1=int(input("d1:"))
D2=int(input("d2:"))
D3=int(input("d3:"))
D4=int(input("d4:"))

x=espada
if(atk == x and (D1>=1 ) and (D1<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
if(atk=="CAUDA" and (D1>=1) and (D1<=6) and (D2>=1) and (D2<=6) and (D3>=1) and (D3<=6) and (D4>=1) and (D4<=6)):
	print((D1+D2+D3)*D4)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=espada
NameError: name 'espada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:45:56) 
-- CODE:
atk=input("atk:")
D1=int(input("d1:"))
D2=int(input("d2:"))
D3=int(input("d3:"))
D4=int(input("d4:"))

x=espada
if(atk == x and (D1>=1 ) and (D1<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
if(atk=="CAUDA" and (D1>=1) and (D1<=6) and (D2>=1) and (D2<=6) and (D3>=1) and (D3<=6) and (D4>=1) and (D4<=6)):
	print((D1+D2+D3)*D4)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=espada
NameError: name 'espada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:25) 
-- CODE:
atk=input("atk:")
D1=int(input("d1:"))
D2=int(input("d2:"))
D3=int(input("d3:"))
D4=int(input("d4:"))


if(atk == x and (D1>=1 ) and (D1<=6) ):
	print(N+6)
else:
	print("Entrada invalida")
if(atk== y and (D1>=1) and (D1<=6) and (D2>=1) and (D2<=6) and (D3>=1) and (D3<=6) and (D4>=1) and (D4<=6)):
	print((D1+D2+D3)*D4)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(atk == x and (D1>=1 ) and (D1<=6) ):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:47:48) 
-- CODE:
atk=input("atk:")
D1=int(input("d1:"))
D2=int(input("d2:"))
D3=int(input("d3:"))
D4=int(input("d4:"))

x== ESPADA
y==CAU
if(atk ==  and (D1>=1 ) and (D1<=6) ):
	print(D1+6)
else:
	print("Entrada invalida")
if(atk== y and (D1>=1) and (D1<=6) and (D2>=1) and (D2<=6) and (D3>=1) and (D3<=6) and (D4>=1) and (D4<=6)):
	print((D1+D2+D3)*D4)	
-- ERROR:
File "XXXX", line 9
    if(atk ==  and (D1>=1 ) and (D1<=6) ):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:48:00) 
-- CODE:
atk=input("atk:")
D1=int(input("d1:"))
D2=int(input("d2:"))
D3=int(input("d3:"))
D4=int(input("d4:"))

x== ESPADA
y==CAU
if(atk == X and (D1>=1 ) and (D1<=6) ):
	print(D1+6)
else:
	print("Entrada invalida")
if(atk== y and (D1>=1) and (D1<=6) and (D2>=1) and (D2<=6) and (D3>=1) and (D3<=6) and (D4>=1) and (D4<=6)):
	print((D1+D2+D3)*D4)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x== ESPADA
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:52:55) 
-- CODE:
atk=input("atk:")
D1=int(input("d1:"))
D2=int(input("d2:"))
D3=int(input("d3:"))
D4=int(input("d4:"))
x= ESPADA
if(atk == "X" and (D1>=1 ) and (D1<=6) ):
	print(D1+6)
else:
	print("Entrada invalida")
if(atk==  and (D1>=1) and (D1<=6) and (D2>=1) and (D2<=6) and (D3>=1) and (D3<=6) and (D4>=1) and (D4<=6)):
	print((D1+D2+D3)*D4)	
-- ERROR:
File "XXXX", line 11
    if(atk==  and (D1>=1) and (D1<=6) and (D2>=1) and (D2<=6) and (D3>=1) and (D3<=6) and (D4>=1) and (D4<=6)):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:53:22) 
-- CODE:
atk=input("atk:")
D1=int(input("d1:"))
D2=int(input("d2:"))
D3=int(input("d3:"))
D4=int(input("d4:"))
x= ESPADA
Y= CAU
if(atk == "X" and (D1>=1 ) and (D1<=6) ):
	print(D1+6)
else:
	print("Entrada invalida")
if(atk== "y" and (D1>=1) and (D1<=6) and (D2>=1) and (D2<=6) and (D3>=1) and (D3<=6) and (D4>=1) and (D4<=6)):
	print((D1+D2+D3)*D4)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x= ESPADA
NameError: name 'ESPADA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:53:52) 
-- CODE:
atk=input("atk:")
D1=int(input("d1:"))
D2=int(input("d2:"))
D3=int(input("d3:"))
D4=int(input("d4:"))
x==ESPADA
Y==CAU
if(atk == "X" and (D1>=1 ) and (D1<=6) ):
	print(D1+6)
else:
	print("Entrada invalida")
if(atk== "y" and (D1>=1) and (D1<=6) and (D2>=1) and (D2<=6) and (D3>=1) and (D3<=6) and (D4>=1) and (D4<=6)):
	print((D1+D2+D3)*D4)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x==ESPADA
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
